[package]
name = "jam_client"
version = "0.1.0"
authors = ["m-olej <music.olejniczak@wp.pl>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.40.0", features = ["full"] }
